# DEPRECATED_agl-service-voice-high

./: .gitmodules  CMakeLists.txt  README.md
conf.d/cmake/: config.cmake
conf.d/project/etc/: CMakeLists.txt  vshl-api.json
conf.d/wgt/: config.xml.in
htdocs/: amazon.js  binding.js  index.html
src/: CMakeLists.txt  vshl-apidef.h  vshl-apidef.json  vshl-binding.c  vshl-binding.h
src/plugins/: CMakeLists.txt  VshlApi.cpp  VshlApi.h
src/plugins/afb/: AFBApiImpl.cpp  AFBApiImpl.h  AFBRequestImpl.cpp  AFBRequestImpl.h
src/plugins/afb/include/: AFBEventImpl.h
src/plugins/afb/src/: AFBEventImpl.cpp
src/plugins/appmanagement/: AppController.cpp  AppController.h
src/plugins/capabilities/: CapabilitiesFactory.cpp  CapabilitiesFactory.h  CapabilityMessagingService.cpp  CapabilityMessagingService.h
src/plugins/capabilities/communication/include/: PhoneControlCapability.h  PhoneControlMessages.h
src/plugins/capabilities/communication/src/: PhoneControlCapability.cpp
src/plugins/capabilities/core/include/: MessageChannel.h  PublisherForwarder.h  SubscriberForwarder.h
src/plugins/capabilities/core/src/: MessageChannel.cpp  PublisherForwarder.cpp  SubscriberForwarder.cpp
src/plugins/capabilities/guimetadata/include/: GuiMetadataCapability.h  GuiMetadataMessages.h
src/plugins/capabilities/guimetadata/src/: GuiMetadataCapability.cpp
src/plugins/capabilities/navigation/include/: NavigationCapability.h  NavigationMessages.h
src/plugins/capabilities/navigation/src/: NavigationCapability.cpp
src/plugins/capabilities/test/: CapabilityMessagingServiceTest.cpp  PublisherForwarderTest.cpp  SubscriberForwarderTest.cpp
src/plugins/cmake/: gtest.cmake
src/plugins/core/: VRRequestProcessor.h  VRRequestProcessorImpl.cpp
src/plugins/core/include/: VRAgentsObserver.h  VRRequest.h  VRRequestProcessorDelegate.h
src/plugins/core/src/: VRAgentsObserverImpl.cpp  VRRequestImpl.cpp  VRRequestProcessorDelegateImpl.cpp
src/plugins/core/test/: VRRequestProcessorTest.cpp  VRRequestTest.cpp
src/plugins/interfaces/afb/: IAFBApi.h
src/plugins/interfaces/appmanagement/: IAppController.h
src/plugins/interfaces/capabilities/: ICapability.h
src/plugins/interfaces/utilities/events/: IEventFilter.h
src/plugins/interfaces/utilities/logging/: ILogger.h
src/plugins/interfaces/voiceagents/: IVoiceAgent.h  IVoiceAgentsChangeObserver.h
src/plugins/test/common/: ConsoleLogger.cpp  ConsoleLogger.h
src/plugins/test/mocks/: AFBApiMock.h  AFBEventMock.h  AFBRequestMock.h  CapabilityMock.h  VoiceAgentsChangeObserverMock.h
src/plugins/utilities/events/: EventRouter.cpp  EventRouter.h
src/plugins/utilities/logging/: Logger.cpp  Logger.h
src/plugins/utilities/uuid/: UUIDGeneration.cpp  UUIDGeneration.h
src/plugins/voiceagents/: VoiceAgentEventNames.h  VoiceAgentsDataManager.h  VoiceAgentsDataManagerImpl.cpp
src/plugins/voiceagents/include/: VoiceAgent.h  VoiceAgentEventsHandler.h
src/plugins/voiceagents/src/: VoiceAgentEventsHandler.cpp  VoiceAgentImpl.cpp
src/plugins/voiceagents/test/: VoiceAgentTest.cpp  VoiceAgentsDataManagerTest.cpp  VoiceAgentsTestData.h
